@@ -1,3 +1,12 @@
+Changelog 0.3.97 [20230725]:
+- Removed Uncategorized Menus
+- Made Category Menus for Movies and TV Shows
+- Added Movie Search For Movies
+- Added TV Search For TV Shows
+- Added Movie Genres for Movies
+- Added TV Genres For TV Shows
+- Changed alot of Menu Settings
+
 Changelog 0.3.96 [20230723]:
 - Moved get season function to utils
 - Matched hight Positions on Select Source
